--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </ul>
         </div>
         <div class="navbar-end">
-            <a href="https://sh-rohan03.github.io/Portify/" class="btn h-5 w-20 text-white mr-10 border-black"
+            <a href="https://sh-rohan03.github.io/cv/" class="btn h-5 w-20 text-white mr-10 border-black"
                 target="_blank">View CV</a>
         </div>
     </div>
